static/css/hl.css
/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   Global styles
   */

html {
  position:relative;
  min-height:100%;
}

body {
  background:#fff;
  font-family:Open Sans;
  font-size:13px;
  margin:0 0 4em;
  padding:0;
}

.wrap {
  background:#fff;
  padding-bottom:2em;
}

p,ul,li {
  font-size:15px;
}

h1 {
  margin-top:.1em;
  margin-left:0;
  text-indent:-.05em;
}

h2 {
  color:#6e618d;
}

.navbar {
  background-color:#352f44;
  border-radius:0;
  border:0;
}

.navbar-header .navbar-brand {
  color:#fff;
  font-size:inherit;
  font-weight:700;
}

.navbar-header .navbar-brand .logo {
  margin-right:.5em;
  color:#fff;
}

.logo {
  font-family:haskell;
  font-weight:400;
}

.navbar-header .navbar-brand:hover {
  color:#fff;
}

.navbar-default .navbar-nav > .active > a {
  color:#d1cddc!important;
  background-color:#312b3f;
  border-bottom:.3em solid #465787;
}

.navbar-default .navbar-nav > .active > a:hover {
  color:#d1cddc!important;
  background-color:#312b3f;
}

.navbar-default .navbar-nav > li > a {
  color:#d1cddc!important;
  background-color:inherit;
}

.footer {
  background-color:#323232;
  color:#999;
  position:absolute;
  bottom:0;
  width:100%;
  height:4em;
  line-height:2em;
}

.footer p {
  margin-top:1em;
  font-size:13px;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   Template
   */

.template .navbar {
  margin-bottom:.5em;
}

.template code {
  background-color:#f5f5f5;
  color:#366354;
  font-family: monospace;
}

.template pre {
  font-size:14px;
  font-family: monospace;
}

.template .container > .row {
  margin-left:0;
  margin-right:0;
  max-width:none;
}

.template .breadcrumb {
  margin-left:0;
  padding-left:0;
  background-color:inherit;
  margin-bottom:0;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   News page
   */

.page-news .span6 {
  padding-left:0;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
   Home page
   */

.page-home .navbar-collapse {
  margin-left: -30px;
}

.page-home .navbar {
  margin-bottom:0;
  background: #150e1a; /* Old browsers */
  background: -moz-linear-gradient(left, #150e1a 0%, #22172a 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, right top, color-stop(0%,#150e1a), color-stop(100%,#22172a)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(left, #150e1a 0%,#22172a 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(left, #150e1a 0%,#22172a 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(left, #150e1a 0%,#22172a 100%); /* IE10+ */
  background: linear-gradient(to right, #150e1a 0%,#22172a 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#150e1a', endColorstr='#22172a',GradientType=1 ); /* IE6-9 */
}

.page-home .header {
  color: #fff;
  background: #19111f; /* Old browsers */
  background: -moz-linear-gradient(left, #19111f 0%, #2c1e37 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, right top, color-stop(0%,#19111f), color-stop(100%,#2c1e37)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(left, #19111f 0%,#2c1e37 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(left, #19111f 0%,#2c1e37 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(left, #19111f 0%,#2c1e37 100%); /* IE10+ */
  background: linear-gradient(to right, #19111f 0%,#2c1e37 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19111f', endColorstr='#2c1e37',GradientType=1 ); /* IE6-9 */
}

.page-home .header .branding {
  margin-top: 50px;
}

.page-home .header {
  padding-bottom: 40px;
}

.page-home .header .branding .name {
  display: block;
  font-size: 50px;
  font-family: ubuntu;
  line-height: 50px;
  padding-left: 80px;
  font-family: ubuntu;
  font-weight: bold;
  background-position: left;
  background-repeat: no-repeat;
  background-size: 70px;
}

.page-home .header .branding .summary {
  margin-top: 20px;
  display: block;
  font-size: 20px;
}

.page-home .header .branding .tag {
  display: block;
  font-size: 30px;
}

.page-home .header .code-sample pre {
  background: inherit;
  border: 0;
  font-family: monospace;
}

.page-home .header .code-sample * {
  color: #c3c3c3;
}

.page-home .header .code-sample .hs-definition {
  color: #9ec7e9;
}

.page-home .header .code-sample .hs-num {
  color: #c3a6e0;
}

.page-home .header .code-sample .hs-keyword {
  color: #fff;
}

.page-home .header .code-sample .hs-layout,
.page-home .header .code-sample .hs-keyglyph {
  color: #4c4c4c;
}

.page-home .muted {
  opacity: 0.6;
}

.page-home .try {
  margin-top: 10px;
  margin-bottom: 30px;
}

.page-home .try code * {
  background: inherit;
}

.page-home .try code {
  background-color: #f7f7f9;
  color: #366354;
  border: 1px solid #e1e1e8;
}

.page-home .try h2 {
  font-size: 25px;
  color: #000;
  margin-bottom: 20px;
}

.page-home .community {
  margin-top: 30px;
  padding-top: 40px;
  background-repeat: no-repeat;
  background-position: center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.page-home .community h1 {
  color: #fff;
  text-shadow: 0px 0px 10px #555;
}

.page-home .community .learn-more {
  margin-top: 80px;
  margin-bottom: 40px;
}

.page-home .community .learn-more a {
  color: #fff;
}

.page-home .features h1 {
  margin-top: 40px;
}

.page-home .features h2 {
  font-size: 25px;
  margin-bottom: 0.7em;
  color: #222;
}

.page-home .features {
  margin-bottom: 40px;
}

